[package]
name = "aag2courageous"
version = "0.1.0"
edition = "2021"
authors = ["Alejandro Perea (aleok.inf@gmail.com)"]
description = "Commandline application to convert Aaronia GPS log files to COURAGEOUS files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
courageous-format = { git = "https://github.com/COURAGEOUS-isf/format", version = "0.6.2" }
glam = "0.27.0"
nmea = "0.6.0"
nom = "7.1.3"
serde = "1.0.117"
serde_json = "1.0.115"
