[package]
name = "aag2courageous"
version = "0.2.0"
edition = "2021"
authors = ["Alejandro Perea (aleok.inf@gmail.com)"]
description = "Commandline application to convert Aaronia GPS log files to COURAGEOUS files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
courageous-format = { git = "https://github.com/COURAGEOUS-isf/format", version = "0.6.2" }
nmea = "0.6.0"
serde_json = "1.0.115"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"